Change get proposals to be a POST method and some fixes
